@@ -1,3 +1,6 @@
+- localedrake:
+  o install needed packages for skim
+
 Version 10.4.196 - 14 September 2007, by Olivier "blino" Blin
 
 - fix typo breaking reading fstab with UUID= entries
