@@ -1,5 +1,7 @@
 - diskdrake:
   o fix typo breaking reading fstab with UUID= entries
+- localedrake:
+  o install needed packages for skim
 
 Version 10.4.195 - 14 September 2007, by Thierry Vignaud
 
